--- a/11 - Boostrap4/componentes.html
+++ b/11 - Boostrap4/componentes.html
@@ -86,13 +86,27 @@
                         </li>
                     </ol>
                 </nav>
-                <div class="alert alert-success alert/dismissble fade show">
+                <div class="alert alert-success alert-dismissible fade show">
                     <strong>Te has registrado</strong>
 
                     <button type="button" class="close" data-dismiss="alert" >
                         <span >&times;</span>
                     </button>
                 </div>
+
+                <h2>
+                    <span class="badge badge-success">
+                        Nuevo
+                    </span>
+                    Componentes Boostrap4
+                </h2>
+                <p>
+                    dale cliente en
+                    <a class="badge badge-danger badge-pill">
+                        Siguiente
+                    </a>
+                </p>
+
             </div>
         </div>
 
