--- a/11 - Boostrap4/componentes.html
+++ b/11 - Boostrap4/componentes.html
@@ -109,6 +109,30 @@
 
             </div>
         </div>
+        
+        <div class="row">
+            <div class="card col p-0 mr-2">
+                <img class="card-img-top img-fluid" src="https://via.placeholder.com/300x200">
+                <div class="card-body">
+                    <h3 class="card-title">Tarjeta</h3>
+                    <p class="card-text">Entra al siguiente articulo</p>
+                </div>
+            </div>
+            <div class="card col p-0 mr-2">
+                <img class="card-img-top img-fluid" src="https://via.placeholder.com/300x200">
+                <div class="card-body">
+                    <h3 class="card-title">Tarjeta</h3>
+                    <p class="card-text">Entra al siguiente articulo</p>
+                </div>
+            </div>
+            <div class="card col p-0 mr-2">
+                <img class="card-img-top img-fluid" src="https://via.placeholder.com/300x200">
+                <div class="card-body">
+                    <h3 class="card-title">Tarjeta</h3>
+                    <p class="card-text">Entra al siguiente articulo</p>
+                </div>
+            </div>
+        </div>
 
     </div>
     <script type="text/javascript" src="Jquery/jquery-3.5.1.min.js"></script>
