--- a/11 - Boostrap4/componentes.html
+++ b/11 - Boostrap4/componentes.html
@@ -116,6 +116,7 @@
                 <div class="card-body">
                     <h3 class="card-title">Tarjeta</h3>
                     <p class="card-text">Entra al siguiente articulo</p>
+                    <a href="#" class="btn btn-info">Info</a>
                 </div>
             </div>
             <div class="card col p-0 mr-2">
@@ -123,6 +124,7 @@
                 <div class="card-body">
                     <h3 class="card-title">Tarjeta</h3>
                     <p class="card-text">Entra al siguiente articulo</p>
+                    <a href="#" class="btn btn-info">Info</a>
                 </div>
             </div>
             <div class="card col p-0 mr-2">
@@ -130,6 +132,7 @@
                 <div class="card-body">
                     <h3 class="card-title">Tarjeta</h3>
                     <p class="card-text">Entra al siguiente articulo</p>
+                    <a href="#" class="btn btn-info">Info</a>
                 </div>
             </div>
         </div>
