--- a/11 - Boostrap4/componentes.html
+++ b/11 - Boostrap4/componentes.html
@@ -68,6 +68,7 @@
                         </ul>
                     </div>
                 </nav>
+
             </header>
         </div>
 
@@ -86,6 +87,57 @@
                         </li>
                     </ol>
                 </nav>
+
+                <!--Slider-->
+
+
+                <div id="slider" class="carousel slide mb-3" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#slider" data-slide-to="0" class="active"></li>
+                        <li data-target="#slider" data-slide-to="1"></li>
+                        <li data-target="#slider" data-slide-to="2"></li>
+                      </ol>
+
+
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="https://via.placeholder.com/900x350?text=PRIMERA">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>First slide label</h5>
+                                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                              </div>
+                        </div>
+
+                        <div class="carousel-item ">
+                            <img class="d-block w-100" src="https://via.placeholder.com/900x350?text=SEGUNDA">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>First slide label</h5>
+                                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                              </div>
+                        </div>
+                         
+                        <div class="carousel-item ">
+                            <img class="d-block w-100" src="https://via.placeholder.com/900x350?text=TERCERA">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>First slide label</h5>
+                                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                              </div>
+                        </div>
+                    </div>
+
+                    <a class="carousel-control-prev" href="#slider" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                        <span class="sr-only">Anterior</span>
+                    </a>
+
+                    <a class="carousel-control-next" href="#slider" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                        <span class="sr-only">siguiente</span>
+                    </a>
+                </div>
+
+                <!--Fin Slider-->
+
                 <div class="alert alert-success alert-dismissible fade show">
                     <strong>Te has registrado</strong>
 
@@ -140,6 +192,15 @@
     </div>
     <script type="text/javascript" src="Jquery/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="bootstrap-4.5.0-dist/js/bootstrap.min.js"></script>
+
+    <script>
+        $(document).ready(function(){
+            $(".carousel").carousel({
+                interval:2000
+            })
+        })
+    </script>
+
 </body>
 
 </html>
