--- a/11 - Boostrap4/componentes.html
+++ b/11 - Boostrap4/componentes.html
@@ -192,6 +192,44 @@
             </div>
         </div>
         <div class="row">
+            <nav aria-label="pagination">
+                <ul class="pagination m-3">
+                    <li class="page-item">
+                        <a class="page-link" href="#">
+                            &laquo;
+                        </a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="#">
+                            1
+                        </a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="#">
+                            2
+                        </a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="#">
+                            3
+                        </a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="#">
+                            4
+                        </a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="#">
+                            &raquo;
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+
+
+        <div class="row">
             <div class="col-md-8">
                 <div class="jumbotron my-3">
                     <h1 class="display-6">Bienvenido a mi Web</h1>
