--- a/11 - Boostrap4/componentes.html
+++ b/11 - Boostrap4/componentes.html
@@ -296,8 +296,9 @@
             </script>
         </div>
         <button type="button" class="btn-tool btn btn-danger" data-toggle="tooltip" data-placement="bottom"
-                title="Aperecerá una alerta">Alerta</button>
-
+            title="Esto es un tooltip">Alerta</button>
+        <button type="button" class="btn-pop btn btn-success" data-container="body" data-toggle="popover" data-placement="top"
+            data-content="Esto es un PopOver">Alerta</button>
     </div>
     <script type="text/javascript" src="Jquery/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="Jquery/popper.min.js"></script>
@@ -309,7 +310,9 @@
                 interval: 2000
             }),
 
-            $(".btn-tool").tooltip();
+                $(".btn-tool").tooltip();
+
+            $(".btn-pop").popover();
         });
     </script>
 
